# Genie-Engine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
assets/shaders/: shader.frag  shader.vert
src/: main.cpp  shader.h
